# prometheus

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mapper_params_online_async.yaml  nav2_params.yaml  small_house.pgm  small_house.yaml
launch/: bringup_launch.py  gz.launch.py  mapping.launch.py  nav2.launch.py  rviz.launch.py  spawn.launch.py
models/prometheus/meshes/: prometheus_chassis.dae  traction_wheel_left.dae  traction_wheel_right.dae
models/prometheus/urdf/: gz.xacro  macros.xacro  materials.xacro  prometheus.xacro
models/so_100_arm_5dof/urdf/: so_100_arm_5dof.urdf
rviz/: nav2_default_view.rviz
worlds/: small_house.sdf
